# kochcloud-dashboard

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: docker-image.yml  docker-publish.yml
.streamlit/: config.toml
alembic/versions/: 63be430581f7_create_app_passwords_schema.py
app-passwords/: app-passwords.py
conf/: kochcloud-dashboard.yaml
docker/: docker-entrypoint.sh
docker/conf/: alembic.ini.template
docker/conf/streamlit/: config.toml.template  secrets.toml.template
kochcloud-dashboard/: config.py  dashboard.py  email-passwords.py  kochcloud-dashboard-app.py
